--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "Figma",
   "license": "MIT License",
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.44.3",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^1.13.1",
     "yup": "^1.2.0"
   },
